--- a/docs/Welcome/Quickstart.mdx
+++ b/docs/Welcome/Quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-slug: "introduction"
+title: "Quickstart"
+slug: "quickstart"
 excerpt: "A quick introduction to building with Vital"
 sidebar_position: 1
 hidden: false
@@ -201,5 +201,5 @@ to modify the Quickstart code in order to get more practice with the Vital API.
 
 There are a few directions you can go in now:
 
-- Vital Link
-- Native SDKs
+- [Vital Link](/vital-link)
+- [Vital SDKs](/sdks/ios)
