docs content in-line with readme

--- a/docs/Welcome/Quickstart.mdx
+++ b/docs/Welcome/Quickstart.mdx
@@ -23,14 +23,15 @@ import {
 
 # Introduction
 
-Let's get started, first you’ll need API keys, which you can receive by signing up in the Dashboard.
+To get started with Vital you will need a Vital `API Key`, which you can request by registering with
+us in the [dashboard](https://app.tryvital.io). Once registered, we will place you onto our
+waitlist for further review. Once you have been approved, you will be granted access to:
+the [dashboard](https://app.tryvital.io), our sandbox and production environments and be
+given `API Key` for each environment.
 
-You'll have two different API keys, and there are two different Vital environments. Today we'll start in the Sandbox environment. View the configuration section of the Dashboard to find your Sandbox and production `API Key`.
-
-| Keys                  |
-| --------------------- | -------------------------------- |
-| @@FiKey client_id     | Private identifier for your team |
-| @@FiKey client_secret | Private key                      |
+| Keys            |
+| --------------- | -------------------------------- |
+| @@FiKey api_key | Private identifier for your team |
 
 | Environment        |                                             |
 | ------------------ | ------------------------------------------- |
