--- a/docs/providers/Introduction.mdx
+++ b/docs/providers/Introduction.mdx
@@ -3,3 +3,71 @@ sidebar_position: 1
 ---
 
 # Introduction
+
+We currently Support over 300+ devices, a full list can be seen below.
+
+| Provider                                             | Description                                                   |
+| ---------------------------------------------------- | ------------------------------------------------------------- |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/) | Abbott CGM Glucose monitor                                    |
+| [Fitbit](https://www.fitbit.com/global/uk/home)      | Activity Trackers (all devices)                               |
+| [Garmin](https://www.garmin.com)                     | Fitness watches (all devices)                                 |
+| [Oura](https://ouraring.com)                         | Smart Sleep tracking ring                                     |
+| [Peloton](https://www.onepeloton.com)                | Popular Indoor Exercise bike                                  |
+| [Renpho](https://renpho.com)                         | Fitness Scales                                                |
+| [Strava](https://www.strava.com)                     | Running & Cycling Social Network                              |
+| [Wahoo](https://wahoofitness.com)                    | Cycling Equipment                                             |
+| [Zwift](https://zwift.com)                           | Virtual cycling and running                                   |
+| [Withings](https://www.withings.com)                 | Fitness scales, watches and health monitors                   |
+| [iHealth](https://ihealthlabs.com)                   | Blood pressure, Fitness scales, Glucometers & Fitness watches |
+| [Omron](https://www.omron-healthcare.com) (SDK)      | Blood Pressure monitors and scales                            |
+| [Contour](https://www.diabetes.ascensia.com) (SDK)   | Glucometers                                                   |
+| [Accu-Chek](https://www.accu-chek.com) (SDK)         | Glucose Strips/MySugr App                                     |
+
+## Providers under active development
+
+**Beta**: Currently under development
+**Planned**: On our roadmap
+
+| Provider                                                      | Description                                       | Stage   |
+| ------------------------------------------------------------- | ------------------------------------------------- | ------- |
+| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK) | Health and fitness data on iPhone and Apple Watch | Beta    |
+| [Braun Healthcare](https://www.braunhealthcare.com)           | Blood Pressure Monitors                           | Beta    |
+| [Google Fit](https://www.google.com/fit/)                     | Activity Trackers (all devices)                   | Beta    |
+| [Suunto](https://www.suunto.com)                              | Fitness Watch                                     | Planned |
+| [Dexcom](https://www.dexcom.com)                              | Continuous glucose monitor                        | Planned |
+| [iGlucose](https://smartmeterrpm.com/iglucose/)               | Glucose Strips                                    | Planned |
+| [Polar](https://www.polar.com)                                | Activity Watch                                    | Planned |
+| [KetoMojo](https://keto-mojo.com)                             | Glucose, Ketones and more                         | Planned |
+
+## Full Device Support List
+
+<iframe
+  src="https://airtable.com/embed/shrnlG3Z7tunKuUwh/tblRcat09AWv1Aj7L/viwgVLLG0uqKB0vbi"
+  frameborder="0"
+  allowfullscreen="true"
+  width="100%"
+  height="533"
+>
+  {" "}
+</iframe>
+
+## Data Frequency
+
+All data can be fetched instantaneously, some are configured via our live refresh endpoint and others are automatically kept up to date via our webhook implementation.
+
+| Provider                                             | Description  |
+| ---------------------------------------------------- | ------------ |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/) | Live Refresh |
+| [Fitbit](https://www.fitbit.com/global/uk/home)      | Webhooks     |
+| [Garmin](https://www.garmin.com)                     | Webhooks     |
+| [Oura](https://ouraring.com)                         | Live Refresh |
+| [Peloton](https://www.onepeloton.com)                | Live Refresh |
+| [Renpho](https://renpho.com)                         | Live Refresh |
+| [Strava](https://www.strava.com)                     | Webhooks     |
+| [Wahoo](https://wahoofitness.com)                    | Webhooks     |
+| [Zwift](https://zwift.com)                           | Live Refresh |
+| [Withings](https://www.withings.com)                 | Webhooks     |
+| [iHealth](https://ihealthlabs.com)                   | Webhooks     |
+| [Omron](https://www.omron-healthcare.com) (SDK)      | Webhooks     |
+| [Contour](https://www.diabetes.ascensia.com) (SDK)   | Webhooks     |
+| [Accu-Chek](https://www.accu-chek.com) (SDK)         | Webhooks     |
