--- a/docs/vital-link/launching_link.mdx
+++ b/docs/vital-link/launching_link.mdx
@@ -2,4 +2,52 @@
 sidebar_position: 3
 ---
 
+import { CodeBlock } from "@theme/codeblock";
+import { Image } from "@chakra-ui/react";
+
 # Launching link
+
+You may want to launch Vital Link for an individual provider. This launches the Vital Link widget straight into the login flow for the specified provider.
+
+To do so, you just pass in the provider name as one of the parameter's to the link create endpoint:
+
+<CodeBlock title={"Launching Vital-Link"}>
+
+```python
+from vital import Client
+
+client = Client(
+     client_id,
+     client_secret,
+     environment="sandbox"
+     )
+
+token = client.Link.create(user_id, "oura")
+```
+
+```js
+const { VitalClient } = require("Vital");
+
+const client = new VitalClient({
+  client_id: <CLIENT_ID>,
+  client_secret:  <CLIENT_SECRET>,
+  environment: "sandbox",
+});
+
+const resp = await client.Link.create(client_user_id, "oura")
+```
+
+```bash
+curl --request POST \
+     --url https://api.tryvital.io/v2/link/token \
+     --header 'Accept: application/json' \
+     --header 'Content-Type: application/json'
+     --header 'x-vital-api-key: <API-KEY>'
+```
+
+</CodeBlock>
+
+Use the link token to [launch the link widget](https://vital-docs.readme.io/docs/vital-link-1#vital-link-flow)
+on your frontend. This will launch link widget straight into the login flow for the provider.
+
+<Image src="/img/link_specific.png" />
