--- a/api-reference/data/sleep/index.mdx
+++ b/api-reference/data/sleep/index.mdx
@@ -2,4 +2,54 @@ import { Swagger } from "@theme/swagger";
 
 # Overview
 
-## List of supported providers
+## Summary
+
+<Swagger endpoint={"/summary/sleep/{user_id}"} method={"get"} title={"Get Sleep stream"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Vitals.heartrate(user_id=*,
+    start_date="2020-01-01",
+    end_date="2021-01-01"
+)
+```
+
+</Swagger>
+
+## Stream
+
+<Swagger endpoint={"/timeseries/sleep/{sleep_id}/stream"} method={"get"} title={"Get Sleep stream"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Vitals.heartrate(user_id=*,
+        start_date="2020-01-01",
+        end_date="2021-01-01"
+        )
+```
+
+</Swagger>
+
+## Raw
+
+<Swagger endpoint={"/timeseries/sleep/{sleep_id}/raw"} method={"get"} title={"Get Raw Sleep Data"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.ProviderSpecific.get(user_id=*,
+          provider="oura"
+          start_date="2020-01-01",
+          end_date="2021-01-01"
+          )
+```
+
+</Swagger>
