--- a/api-reference/data/workouts/index.mdx
+++ b/api-reference/data/workouts/index.mdx
@@ -1,5 +1,38 @@
 import { Swagger } from "@theme/swagger";
 
-# Overiew
+# Overview
 
-## List of supported providers
+## Summary
+
+<Swagger endpoint={"/summary/workouts/{user_id}"} method={"get"} title={"Get workouts data"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Workouts.get(user_id=*,
+      start_date="2020-01-01",
+      end_date="2021-01-01"
+      )
+```
+
+</Swagger>
+
+## Raw
+
+<Swagger endpoint={"/summary/workouts/{user_id}/raw"} method={"get"} title={"Get Raw workouts Data"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.ProviderSpecific.get(user_id=*,
+          provider="oura"
+          start_date="2020-01-01",
+          end_date="2021-01-01"
+          )
+```
+
+</Swagger>
