--- a/api-reference/labs/orders/index.mdx
+++ b/api-reference/labs/orders/index.mdx
@@ -3,3 +3,59 @@ import { Swagger } from "@theme/swagger";
 # Overview
 
 ## Get Orders
+
+<Swagger endpoint={"/testkit/orders/"} method={"get"} title={"Get Teams orders"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Testkits.get_orders("2021-01-01", "2022-12-02")
+```
+
+</Swagger>
+
+## Create Orders
+
+<Swagger endpoint={"/testkit/orders/"} method={"post"} title={"Create order"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Testkits.order(user_id=*,
+        testkit_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
+        patient_details={
+           "dob": "2020-01-01",
+           "gender": "female"
+        },
+        patient_address={
+                "receiver_name": "john Doe",
+                "street": "606 Capp st.",
+                "street_number": "Apt 14",
+                "city": "San Francisco",
+                "state": "CA",
+                "zip": "94107",
+                "country": "US",
+                "phone_number": "+181808433"
+                },
+        })
+```
+
+</Swagger>
+
+## Cancel Order
+
+<Swagger endpoint={"/testkit/orders/{order_id}/cancel"} method={"DELETE"} title={"Create order"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Testkits.cancel(user_id=*)
+```
+
+</Swagger>
