--- a/docs/Welcome/Quickstart.mdx
+++ b/docs/Welcome/Quickstart.mdx
@@ -21,7 +21,7 @@ import {
   Image,
 } from "@chakra-ui/react";
 
-# introduction
+# Introduction
 
 Let's get started, first you’ll need API keys, which you can receive by signing up in the Dashboard.
 
