--- a/api-reference/data/vitals/glucose.mdx
+++ b/api-reference/data/vitals/glucose.mdx
@@ -2,7 +2,7 @@ import { Swagger } from "@theme/swagger";
 
 # Glucose
 
-<Swagger endpoint={"/timeseries/{user_id}/glucose"} method={"get"} title={"Get Glucose Data"}>
+<Swagger endpoint={"/timeseries/{user_id}/{resource}"} method={"get"} title={"Get Glucose Data"}>
 
 ```python
 from vital import Client
