--- a/api-reference/link/index.mdx
+++ b/api-reference/link/index.mdx
@@ -4,7 +4,7 @@ import { Swagger } from "@theme/swagger";
 
 ## Link
 
-<Swagger endpoint={"/link/token/"} method={"post"} title={"Create a new link token"}>
+<Swagger endpoint={"/link/token"} method={"post"} title={"Create a new link token"}>
 
 ```bash
 curl --request POST \
