--- a/docs/Welcome/Quickstart.mdx
+++ b/docs/Welcome/Quickstart.mdx
@@ -23,9 +23,10 @@ import {
 
 # Introduction
 
-Let's get started, first you’ll need API keys, which you can receive by signing up in the Dashboard.
+Let's get started, first you’ll need API keys, which you can request by registering with us in the [Dashboard](https://app.tryvital.io).
 
-You'll have two different API keys, and there are two different Vital environments. Today we'll start in the Sandbox environment. View the configuration section of the Dashboard to find your Sandbox and production `API Key`.
+Once registered, you will be granted access to: the [Dashboard](https://app.tryvital.io),
+our Sandbox and Production environments, and be given a unique API key for each environment.
 
 | Keys            |
 | --------------- | -------------------------------- |
