--- a/api-reference/data/vitals/respiratory_rate.mdx
+++ b/api-reference/data/vitals/respiratory_rate.mdx
@@ -1,3 +1,18 @@
 import { Swagger } from "@theme/swagger";
 
 # Respiratory Rate
+
+<Swagger endpoint={"/timeseries/{user_id}/{resource}"} method={"get"} title={"Get RR data"}>
+
+```python
+from vital import Client
+
+client = Client(client_id, client_secret, "sandbox")
+
+data = client.Vitals.igg(user_id=*,
+        start_date="2020-01-01",
+        end_date="2021-01-01"
+        )
+```
+
+</Swagger>
