fix broken link

--- a/docs/Welcome/Quickstart.mdx
+++ b/docs/Welcome/Quickstart.mdx
@@ -201,5 +201,5 @@ to modify the Quickstart code in order to get more practice with the Vital API.
 
 There are a few directions you can go in now:
 
-- [Vital Link](/vital-link)
+- [Vital Link](/vital-link/introduction)
 - [Vital SDKs](/sdks/ios)
