--- a/api-reference/data/vitals/igg.mdx
+++ b/api-reference/data/vitals/igg.mdx
@@ -2,7 +2,7 @@ import { Swagger } from "@theme/swagger";
 
 # IGG
 
-<Swagger endpoint={"/timeseries/{user_id}/{resource}"} method={"get"} title={"Get heartrate data"}>
+<Swagger endpoint={"/timeseries/{user_id}/igg"} method={"get"} title={"Get heartrate data"}>
 
 ```python
 from vital import Client
