--- a/api-reference/data/vitals/heartrate.mdx
+++ b/api-reference/data/vitals/heartrate.mdx
@@ -2,7 +2,7 @@ import { Swagger } from "@theme/swagger";
 
 # Heartrate
 
-<Swagger endpoint={"/timeseries/{user_id}/{resource}"} method={"get"} title={"Get heartrate data"}>
+<Swagger endpoint={"/timeseries/{user_id}/heartrate"} method={"get"} title={"Get heartrate data"}>
 
 ```python
 from vital import Client
