--- a/docs/Home.mdx
+++ b/docs/Home.mdx
@@ -53,4 +53,4 @@ import { Flex, Image, Heading } from "@chakra-ui/react";
 
 <br />
 
-To get started, check out the quickstart guide.
+To get started, check out our quickstart guide.
