set edit this page url to correct repo - need to make public for link to work. add missing pages

--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -39,7 +39,7 @@ our Sandbox and Production environments, and be given a unique API key for each 
 
 <br />
 
-:::note
+:::info
 
 If you get stuck at any point in the Quickstart, help is just a click away! Join our Slack channel or send us a message to support@tryvital.io
 
