--- a/docs/providers/Guides/Freestyle.mdx
+++ b/docs/providers/Guides/Freestyle.mdx
@@ -1,13 +1,13 @@
 # Freestyle
 
-To connect a user to Freestyle Libre provider:
-
 :::note
 A user must have a Freestyle Libre account.
 :::
 import { Flex, Image, Heading } from "@chakra-ui/react";
+import { CodeBlock } from "@theme/codeblock";
 
-Your user must first connect their Freestyle Libre account to the vital libre practice. This
+To connect a user to the Freestyle Libre provider, your user must first connect their
+Freestyle Libre account to the vital libre practice. This
 allows Vital to start pulling data from their account. This can be done by instructing
 your user to the Libre app. Then heading to _Connected Apps_ and clicking on
 the _Connect to a practice_ button. From there, they should enter `tryvital` or `tryvital-sandbox`
@@ -20,13 +20,67 @@ depending on which environment.
 <br />
 <br />
 
-Once connected, launch a [Vital-Link](../../vital-link/launching_link) for your user to connect their Libre account.
+Once your user has connected their Libre account, you can connect your user to Vital
+either via the **widget** or the **API**.
+
+## Vital Widget
+
+To connect your user to Vital via the Widget you can follow the guide [here](../../vital-link/launching_link).
 
 <br />
 
 <Image src={"/img/libre_connect.png"} width={"40%"} ml={"20%"} />
 
 <br />
+
+## Vital Link
+
+1. To connect to Freestyle Libre, you must create a Vital Link token.
+
+<CodeBlock title={"Connecting email provider"}>
+
+```python
+
+from vital import Client
+
+client = Client(api_key=<API_KEY>, environment='sandbox')
+
+link_token = client.Link.create(user_id)
+```
+
+```js
+const { VitalClient } = require("Vital");
+
+const client = new VitalClient({
+    api_key: <API_KEY>,
+    environment: "sandbox",
+});
+
+const { link_token } = await client.Link.create(
+    userId,
+)
+```
+
+</CodeBlock>
 <br />
 
-Once this is complete we will start syncing data from their Libre account.
+2. Libre is an [_email_](../../vital-link/customization#email) provider.
+   This means that when connecting a user we have to use
+   the connect email provider method, passing in the email of the user's Libre account.
+   <br />
+
+<CodeBlock title={"Connecting email provider"}>
+
+```python
+client.Link.email_provider(link_token, provider, email)
+```
+
+```js
+await client.Link.connectEmailProvider(link_token, "freestyle_libre", email);
+```
+
+</CodeBlock>
+
+<br />
+
+Once this is complete we will start syncing data from their [Libre account](../../api/data_flow).
