--- a/docs/providers/Guides/Freestyle.mdx
+++ b/docs/providers/Guides/Freestyle.mdx
@@ -1,10 +1,7 @@
 # Freestyle
 
 :::note
-A user must have a Freestyle Libre account.
-:::
-import { Flex, Image, Heading } from "@chakra-ui/react";
-import { CodeBlock } from "@theme/codeblock";
+Please make sure you invite Vital to your practice as a clinician with admin rights.
 
 To connect a user to Vital you must first connect your Freestyle practice to Vital.
 Vital has two practices (depending on environment):
@@ -14,10 +11,13 @@ Vital has two practices (depending on environment):
 | Sandbox     | tryVital-sandbox |
 | Production  | tryVital         |
 
+:::
+import { Flex, Image, Heading } from "@chakra-ui/react";
+import { CodeBlock } from "@theme/codeblock";
+
 Once your Freestyle practice is connected to the Vital practice,
 you need to instruct your user's to connect their Libre account to your practice.
 This allows Vital to start pulling data from their account.
-
 This can be through the Libre app. In the app,
 instruct your user's to head to _Connected Apps_ and clicking on
 the _Connect to a practice_ button. From there, they should enter `tryvital` or `tryvital-sandbox`
