--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -47,35 +47,16 @@ If you get stuck at any point in the Quickstart, help is just a click away! Join
 
 ## Quickstart Setup
 
-Once you have your API keys, it's time to run the Vital Quickstart locally! The instructions below will guide you through the process of cloning the Quickstart repository, customizing the .env file with your own Vital API Key and finally, building and running the app.
+We offer different SDKs so you can start building your app right away.
 
-```bash
-git clone https://github.com/vital/quickstart.git
-cd quickstart/python
-# Copy the .env.example file to .env, then fill
-# out API_KEY .env
-cp .env.example .env
-# Note: must use python 3
-# For virtualenv users:
-# virtualenv venv
-# source venv/bin/activate
-pip3 install -r requirements.txt
-# Start the backend app
-./start.sh
-```
+|                   |                                                                                        |
+| ----------------- | -------------------------------------------------------------------------------------- |
+| Python            | [https://github.com/adeptlabs/vital-python](https://github.com/adeptlabs/vital-python) |
+| Node (TypeScript) | [https://github.com/adeptlabs/vital-node](https://github.com/adeptlabs/vital-node)     |
+| Java              | WIP                                                                                    |
+| Go                | WIP                                                                                    |
 
-<br />
-
-Open a new shell and start the frontend app. Your app will be running at http://localhost:3000.
-
-```bash
-# Install dependencies
-cd quickstart/frontend
-npm install
-# Start the frontend app
-npm start
-# Go to http://localhost:3000
-```
+Please refer to the repository for more details.
 
 ## Creating Your First User
 
