replace client id and secret with api key

--- a/api-reference/data/vitals/glucose.mdx
+++ b/api-reference/data/vitals/glucose.mdx
@@ -7,7 +7,7 @@ import { Swagger } from "@theme/swagger";
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Vitals.glucose(
         "glucose",
