--- a/api-reference/labs/results/index.mdx
+++ b/api-reference/labs/results/index.mdx
@@ -9,7 +9,7 @@ import { Swagger } from "@theme/swagger";
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Testkits.result("2021-01-01", "2022-12-02")
 ```
@@ -23,7 +23,7 @@ data = client.Testkits.result("2021-01-01", "2022-12-02")
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Testkits.result("2021-01-01", "2022-12-02")
 ```
@@ -37,7 +37,7 @@ data = client.Testkits.result("2021-01-01", "2022-12-02")
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Testkits.result("2021-01-01", "2022-12-02")
 ```
