--- a/api-reference/data/sleep/index.mdx
+++ b/api-reference/data/sleep/index.mdx
@@ -9,7 +9,7 @@ import { Swagger } from "@theme/swagger";
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Vitals.heartrate(user_id=*,
     start_date="2020-01-01",
@@ -26,7 +26,7 @@ data = client.Vitals.heartrate(user_id=*,
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Vitals.heartrate(user_id=*,
         start_date="2020-01-01",
