--- a/api-reference/labs/orders/index.mdx
+++ b/api-reference/labs/orders/index.mdx
@@ -9,7 +9,7 @@ import { Swagger } from "@theme/swagger";
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Testkits.order(user_id=*,
         testkit_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
@@ -39,7 +39,7 @@ data = client.Testkits.order(user_id=*,
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Testkits.cancel(user_id=*)
 ```
