--- a/api-reference/labs/testkits/index.mdx
+++ b/api-reference/labs/testkits/index.mdx
@@ -9,7 +9,7 @@ import { Swagger } from "@theme/swagger";
 ```python
 from vital import Client
 
-client = Client(client_id, client_secret, "sandbox")
+client = Client(api_key, "sandbox")
 
 data = client.Testkits.get_orders("2021-01-01", "2022-12-02")
 ```
